--- a/all.css
+++ b/all.css
@@ -96,7 +96,7 @@
     text-align: center;
     justify-content: center;
     background: #a2caff;
-    /* position: relative; */
+    position: relative;
 }
 
 .title h2 {
@@ -109,7 +109,9 @@
 
 .star {
     position: absolute;
-    width: 2%;
+    width: 10%;
+    top: 10px;
+    right: 10px;
 }
 
 
