--- a/all.css
+++ b/all.css
@@ -93,23 +93,47 @@
 
 .title {
     width: 24%;
+    /* height: 200px; */
     text-align: center;
     justify-content: center;
     /* background: #a2caff; */
+    /* background-image: url("images/ocean.jpg");
+    background-size: 100%; */
+    /* background-position: top; */
     position: relative;
-}
-
-.title h2 {
-    padding: 10%;
 }
 
 .title img {
     width: 100%;
 }
 
-.title h2 {
+/* .title h2 {
     position: absolute;
+    bottom: 50px;
+
+} */
+
+.title h2 {
+    width: 100%;
+    padding: 15px 0px;
+    background: rgb(255, 255, 255, 0.5);
+    /* opacity: 0.5; */
+    position: absolute;
+    text-align: center;
+    bottom: 0px;
 }
+
+/* .blank {
+    width: 100%;
+    height: 50px;
+    background: rgb(255, 255, 255, 0.5);
+    /* opacity: 0.5; */
+/* position: absolute;
+    text-align: center;
+    align-items: center;
+    bottom: 0px;
+    padding: 50% auto;
+    } */
 
 .star {
     position: absolute;
@@ -196,8 +220,6 @@
         margin-bottom: 5%;
     }
 
-    .title h2 {
-        padding: 5%;
-    }
+
 
 }
