--- a/all.css
+++ b/all.css
@@ -127,13 +127,13 @@
     width: 100%;
     height: 50px;
     background: rgb(255, 255, 255, 0.5);
-    /* opacity: 0.5; */
-/* position: absolute;
+    opacity: 0.5;
+    position: absolute;
     text-align: center;
     align-items: center;
     bottom: 0px;
     padding: 50% auto;
-    } */
+} */
 
 .star {
     position: absolute;
